# legalnewest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PARSER_HANDOFF_DOCUMENT.md  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  dependency-update.yml  security-scan.yml
backend/: __init__.py  cli.py  main.py
backend/analysis/: __init__.py  scoring_engine.py  timeline_extraction.py
backend/analysis/contract/: __init__.py  analyzer.py  clause_extractor.py  comparison.py  date_analyzer.py  financial_analyzer.py  kvkk_checker.py  obligation_finder.py  party_identifier.py  risk_scorer.py  templates.py  term_analyzer.py
backend/analysis/legal/: __init__.py  amendment_tracker.py  citation_finder.py  citation_network_analyzer.py  court_hierarchy.py  jurisdiction_analyzer.py  legal_area_classifier.py  precedent_analyzer.py  precedent_matcher.py  reasoning_engine.py  statute_lookup.py
backend/analysis/ml_features/: __init__.py  feature_engineering.py  feature_extraction.py  feature_importance.py  feature_selection.py
backend/analysis/models/: __init__.py  clause_classifier.py  obligation_classifier.py  party_classifier.py  risk_model.py  term_extractor.py
backend/analysis/nlp/: __init__.py  coreference_resolver.py  dependency_parser.py  entity_linker.py  keyphrase_extractor.py  ner.py  pos_tagger.py  relation_extractor.py  sentiment.py  summarizer.py  (+2 more)
backend/api/: __init__.py  app.py  lifespan.py  main.py  versioning.py
backend/core/: __init__.py  config.py  constants.py  security.py  security_integration_example.py  version.py
backend/documents/: __init__.py
backend/generation/: __init__.py  error_handler.py  field_mapper.py  fill_values.py  manager.py  preview.py  utils.py
backend/infra/: __init__.py  failover.py  providers.py
backend/llm/: __init__.py  adaptive_router.py  batching.py  caching.py  chunk_optimizer.py  circuit_breaker.py  context_manager.py  context_optimizer.py  costs.py  early_exit_handler.py  fallback.py  few_shot_manager.py  load_balancer.py  memory_manager.py  prompt_composer.py  prompt_compressor.py  prompt_framework.py  prompt_library.py  prompt_optimizer.py  prompt_versioner.py  rate_limiter.py  retry.py  router.py  streaming.py  token_counter.py
backend/notifications/: __init__.py  email.py  log.py  push.py  retry.py  sms.py  webhook.py
backend/parsers/: echr_violation_classifier.py  sync_engine.py  topic_classifier.py
backend/rag/: __init__.py
backend/scripts/: robots_checker.cron  robots_checker.py
backend/security/: __init__.py  api_security.py  compliance.py  database_security.py  network_security.py
backend/services/: README_HARVEY_LEGORA_INTEGRATION.md  __init__.py  account_lock_service.py  action_executor.py  activity_feed_service.py  adaptive_compliance_guard.py  adaptive_risk_learner.py  admin_dashboard_service.py  advanced_audit_service.py  advanced_search_service.py  ai_memory_service.py  analytics_engine.py  argument_generator.py  audit_archiver.py  audit_integrity.py  audit_service.py  auth_service.py  base.py  bates_numbering_service.py  breach_notifier.py  bulk_anomaly_detector.py  bulk_comparison_service.py  bulk_report_builder.py  bulk_review_orchestrator.py  case_aggregator.py  case_report_builder.py  chat_service.py  citation_graph_service.py  citation_service.py  citation_validator.py  citator_service.py  classification_service.py  compliance_reporter.py  compliance_tracker.py  consent_service.py  context_manager.py  cost_analyzer.py  deposition_summarizer.py  document_access_service.py  document_annotation_service.py  (+55 more)
backend/tests/: README_GOLDEN_TEST_SET.md  generate_golden_test_set.py  golden_test_set.py  golden_test_validator.py  test_golden_set.py
data/dictionaries/: turkish_legal_synonyms_v1.jsonl
docs/architecture/: backend_diagram.drawio  cost_optimization.md  overview.md  parsing_pipeline.md  rag_design.md  security_layers.md
docs/dev/: api_reference.md  cicd_pipeline.md  db_schema.md  debugging.md  setup_guide.md  testing_guide.md
docs/ops/: disaster_recovery_tests.md  runbook_incidents.md
docs/security/: audit_requirements.md  gdpr_mapping.md  kvkk_compliance.md  privacy_by_design.md  risk_assessment.md
tests/: __init__.py  conftest.py
tests/api/: test_admin.py  test_analysis.py  test_analytics.py  test_audit.py  test_auth.py  test_chat.py  test_compliance.py  test_documents.py  test_generation.py  test_legal_qa.py  test_search.py  test_users.py  test_webhooks.py
tests/cache/: test_cache_keys.py  test_rate_limiter.py
tests/db/: test_indexes.py  test_migrations.py  test_pitr.py  test_replication.py  test_rls.py
tests/integration/: test_contract_workflow.py  test_document_history.py  test_end_to_end_chat.py  test_ingestion_and_parsing.py  test_legal_qa_flow.py  test_multitenancy_isolation.py  test_notifications.py  test_parsers_real_data.py  test_permissions.py  test_pii_protection.py  test_search_results_quality.py
tests/load/: test_api_rate_limit.py  test_concurrent_chat.py  test_heavy_upload.py  test_memory_leak.py  test_uptime_under_attack.py
tests/performance/: test_batch_embedding.py  test_cost_per_request.py  test_llm_streaming_latency.py  test_ocr_speed.py  test_parsers_throughput.py  test_rag_latency.py  test_vector_search_speed.py  test_write_load.py
tests/queue/: test_dlq.py  test_retry.py  test_task_routing.py
tests/security/: test_api_security.py  test_e2ee.py  test_jailbreak.py  test_parser_sandbox.py  test_prompt_injection.py  test_sql_injection.py  test_vuln_scan.py  test_zero_knowledge.py
tests/services/: test_audit_service.py  test_auth_service.py  test_classification_service.py  test_document_service.py  test_dsar_service.py  test_embedding_service.py  test_inference_service.py  test_judgment_service.py  test_rag_service.py  test_report_service.py  test_user_service.py
(+664 files in other folders)
