[tool.poetry]
name = "turkish-legal-ai"
version = "1.0.0"
description = "AI-powered Turkish legal assistant - Harvey AI of Turkey"
authors = ["Your Team <team@yourdomain.com>"]
license = "Proprietary"
readme = "README.md"
homepage = "https://yourdomain.com"
repository = "https://github.com/yourorg/turkish-legal-ai"
keywords = ["legal-tech", "ai", "nlp", "turkish-law", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
# ============================================================================
# PYTHON VERSION
# ============================================================================
python = ">=3.11,<3.13"

# ============================================================================
# WEB FRAMEWORK
# ============================================================================
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# ============================================================================
# DATABASE - PostgreSQL with async support
# ============================================================================
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pgvector = "^0.2.4"
greenlet = "^3.0.0"

# ============================================================================
# CACHE & QUEUE - Redis + Celery
# ============================================================================
redis = {extras = ["hiredis"], version = "^5.0.0"}
celery = {extras = ["redis"], version = "^5.3.0"}
flower = "^2.0.0"

# ============================================================================
# STORAGE - S3 compatible
# ============================================================================
boto3 = "^1.34.0"
botocore = "^1.34.0"
minio = "^7.2.0"

# ============================================================================
# LLM PROVIDERS - Multi-provider support
# ============================================================================
openai = "^1.10.0"
anthropic = "^0.8.0"
google-generativeai = "^0.3.0"
cohere = "^4.40"
tiktoken = "^0.5.0"

# ============================================================================
# DOCUMENT PROCESSING - Multi-format support
# ============================================================================
PyMuPDF = "^1.23.0"
pdfplumber = "^0.10.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.0"
python-pptx = "^0.6.23"
pillow = "^10.2.0"
pypdf = "^3.17.0"

# ============================================================================
# OCR - Optical Character Recognition
# ============================================================================
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"

# ============================================================================
# NLP & ML - Core ML stack (macOS ARM compatible)
# ============================================================================
torch = "^2.1.0"
transformers = "^4.36.0"
sentence-transformers = "^2.3.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
nltk = "^3.8.0"

# ============================================================================
# TURKISH NLP
# ============================================================================
spacy = "^3.7.0"
stanza = "^1.7.0"

# ============================================================================
# PARSING & WEB SCRAPING
# ============================================================================
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
html5lib = "^1.1"
requests = "^2.31.0"
httpx = "^0.26.0"
aiohttp = "^3.9.0"
playwright = "^1.40.0"
selenium = "^4.16.0"
cloudscraper = "^1.2.71"
fake-useragent = "^1.5.0"

# ============================================================================
# SECURITY & CRYPTOGRAPHY
# ============================================================================
cryptography = "^42.0.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
passlib = {extras = ["argon2", "bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pynacl = "^1.5.0"
argon2-cffi = "^23.1.0"

# ============================================================================
# FILE TYPE DETECTION
# ============================================================================
python-magic = "^0.4.27"
python-magic-bin = {version = "^0.4.14", markers = "sys_platform == 'win32'"}

# ============================================================================
# AUTHENTICATION & AUTHORIZATION
# ============================================================================
authlib = "^1.3.0"
oauthlib = "^3.2.2"

# ============================================================================
# OBSERVABILITY - Monitoring & Tracing
# ============================================================================
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"
opentelemetry-instrumentation-redis = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.0"}

# ============================================================================
# STRUCTURED LOGGING
# ============================================================================
structlog = "^24.1.0"
python-json-logger = "^2.0.7"
colorlog = "^6.8.0"

# ============================================================================
# VALIDATION & SERIALIZATION
# ============================================================================
marshmallow = "^3.20.0"
jsonschema = "^4.21.0"

# ============================================================================
# HTTP CLIENT & RETRY LOGIC
# ============================================================================
tenacity = "^8.2.0"
backoff = "^2.2.0"

# ============================================================================
# UTILITIES
# ============================================================================
python-dateutil = "^2.8.2"
pytz = "^2024.1"
click = "^8.1.7"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
python-slugify = "^8.0.0"
ujson = "^5.9.0"
orjson = "^3.9.0"

# ============================================================================
# COMPLIANCE & PII DETECTION
# ============================================================================
presidio-analyzer = "^2.2.351"
presidio-anonymizer = "^2.2.351"

# ============================================================================
# RAG EVALUATION
# ============================================================================
ragas = "^0.1.0"
langsmith = "^0.1.0"

# ============================================================================
# GRAPHQL
# ============================================================================
strawberry-graphql = {extras = ["fastapi"], version = "^0.219.0"}

# ============================================================================
# WEBSOCKETS
# ============================================================================
websockets = "^12.0"
python-socketio = "^5.11.0"

# ============================================================================
# TASK SCHEDULING
# ============================================================================
apscheduler = "^3.10.0"
croniter = "^2.0.0"

# ============================================================================
# RATE LIMITING
# ============================================================================
slowapi = "^0.1.9"
limits = "^3.7.0"

# ============================================================================
# CACHING HELPERS
# ============================================================================
cachetools = "^5.3.0"
diskcache = "^5.6.0"

# ============================================================================
# CSV & DATA PROCESSING
# ============================================================================
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
# ============================================================================
# TESTING FRAMEWORK
# ============================================================================
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-env = "^1.1.0"
pytest-timeout = "^2.2.0"
faker = "^22.0.0"
factory-boy = "^3.3.0"
freezegun = "^1.4.0"
responses = "^0.24.0"
httpx = "^0.26.0"

# ============================================================================
# CODE QUALITY & FORMATTING
# ============================================================================
black = "^23.12.0"
isort = "^5.13.0"
ruff = "^0.1.15"
flake8 = "^7.0.0"
pylint = "^3.0.0"
mypy = "^1.8.0"
bandit = "^1.7.6"
pre-commit = "^3.6.0"

# ============================================================================
# SECURITY SCANNING
# ============================================================================
safety = "^3.0.0"
pip-audit = "^2.6.0"

# ============================================================================
# TYPE STUBS
# ============================================================================
types-requests = "^2.31.0"
types-pytz = "^2024.1.0"
types-pyyaml = "^6.0.12"
types-redis = "^4.6.0"

# ============================================================================
# DOCUMENTATION
# ============================================================================
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

# ============================================================================
# DEBUGGING & PROFILING
# ============================================================================
ipython = "^8.20.0"
ipdb = "^0.13.13"
icecream = "^2.1.0"
line-profiler = "^4.1.0"
memory-profiler = "^0.61.0"

[tool.poetry.group.test.dependencies]
pytest-benchmark = "^4.0.0"
locust = "^2.20.0"
hypothesis = "^6.96.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# BLACK - Code Formatting
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# ============================================================================
# ISORT - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/.venv/*", "*/node_modules/*"]
known_first_party = ["backend"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# RUFF - Fast Python Linter
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "S",   # flake8-bandit
]
ignore = [
    "E501",  # line too long
    "B008",  # function call in defaults
    "S101",  # assert use
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"__init__.py" = ["F401"]

# ============================================================================
# MYPY - Static Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "minio.*",
    "pytesseract.*",
    "stanza.*",
    "ragas.*",
    "cloudscraper.*",
    "selenium.*",
    "playwright.*",
    "PyMuPDF.*",
    "pdfplumber.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST - Testing Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=80",
    "--maxfail=3",
    "--tb=short",
]
markers = [
    "unit: Fast unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (>1s)",
    "security: Security tests",
    "performance: Performance tests",
    "requires_gpu: GPU required",
    "requires_network: Network required",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]
env = [
    "ENVIRONMENT=test",
    "DATABASE_URL=postgresql://test:test@localhost:5432/test_db",
    "REDIS_URL=redis://localhost:6379/0",
]
asyncio_mode = "auto"
timeout = 300

# ============================================================================
# COVERAGE
# ============================================================================
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BANDIT - Security Scanner
# ============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/migrations", "/.venv"]
skips = ["B101", "B601"]

# ============================================================================
# PYLINT
# ============================================================================
[tool.pylint.main]
max-line-length = 100
disable = [
    "C0111",
    "C0103",
    "R0903",
    "R0913",
    "W0212",
]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "pk"]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-locals = 25

# ============================================================================
# POETRY SCRIPTS
# ============================================================================
[tool.poetry.scripts]
dev = "backend.cli:dev"
migrate = "backend.cli:migrate"
seed = "backend.cli:seed"
test = "backend.cli:test"
lint = "backend.cli:lint"
format = "backend.cli:format_code"